--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'war'
+
 
 group = 'com.kotlart'
 version = '0.0.1-SNAPSHOT'
@@ -32,6 +32,6 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//testImplementation 'org.springframework.security:spring-security-test'
-	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat' //disable embedded Tomcat
+	compile 'org.postgresql:postgresql:42.2.5'
 }
+
