--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.flywaydb:flyway-core'
 	compileOnly 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//testImplementation 'org.springframework.security:spring-security-test'
-	compile 'org.postgresql:postgresql:42.2.5'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.postgresql:postgresql:42.2.5'
 }
 
