--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/lingver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=TRACE
