--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,11 @@ buildscript {
 	}
 }
 
+
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+
 
 
 group = 'com.kotlart'
@@ -33,5 +35,6 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.postgresql:postgresql:42.2.5'
+	implementation 'org.modelmapper:modelmapper:2.3.0'
 }
 
