--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.postgresql:postgresql:42.2.5'
 	implementation 'org.modelmapper:modelmapper:2.3.0'
+    annotationProcessor 'org.projectlombok:lombok'
+
+
 }
 
