--- a/lingver-ui/package.json
+++ b/lingver-ui/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "4.1.3",
     "react": "^16.7.0",
-    "react-cookie": "3.0.4",
     "react-dom": "^16.7.0",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
-    "reactstrap": "6.5.0"
+    "reactstrap": "6.5.0",
+    "universal-cookie": "^3.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
