--- a/lingver-ui/package.json
+++ b/lingver-ui/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "bootstrap": "4.1.3",
     "react": "^16.7.0",
@@ -10,6 +12,7 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
     "reactstrap": "6.5.0",
+    "typeface-roboto": "0.0.54",
     "universal-cookie": "^3.0.7"
   },
   "scripts": {
