--- a/lingver-ui/package.json
+++ b/lingver-ui/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "bootstrap": "4.1.3",
+    "notistack": "^0.4.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "4.3.1",
