--- a/lingver-ui/package.json
+++ b/lingver-ui/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
     "typeface-roboto": "0.0.54",
-    "universal-cookie": "^3.0.7"
+    "universal-cookie": "^3.0.7",
+    "classnames": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
