--- a/lingver-ui/package.json
+++ b/lingver-ui/package.json
@@ -6,15 +6,15 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
-    "bootstrap": "4.1.3",
+    "classnames": "latest",
     "notistack": "^0.4.2",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.3",
     "typeface-roboto": "0.0.54",
-    "universal-cookie": "^3.0.7",
-    "classnames": "latest"
+    "universal-cookie": "^3.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
