--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=TRACE
 spring.jpa.open-in-view=false
+server.servlet.session.timeout=30d
