--- a/lingver-ui/package.json
+++ b/lingver-ui/package.json
@@ -9,10 +9,13 @@
     "classnames": "latest",
     "notistack": "^0.4.2",
     "prop-types": "^15.7.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "i18next": "15.0.6",
+    "i18next-browser-languagedetector": "2.2.0",
+    "react-i18next": "^10.8.1",
     "react-router-dom": "4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.8",
     "typeface-roboto": "0.0.54",
     "universal-cookie": "^3.0.7"
   },
