--- a/lingver-ui/package.json
+++ b/lingver-ui/package.json
@@ -7,12 +7,13 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "classnames": "latest",
+    "dotenv": "^8.0.0",
+    "i18next": "15.0.6",
+    "i18next-browser-languagedetector": "2.2.0",
     "notistack": "^0.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "i18next": "15.0.6",
-    "i18next-browser-languagedetector": "2.2.0",
     "react-i18next": "^10.8.1",
     "react-router-dom": "4.3.1",
     "react-scripts": "^2.1.8",
@@ -26,7 +27,6 @@
     "eject": "react-scripts eject"
   },
   "homepage": "./",
-  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
