--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=TRACE
 spring.jpa.open-in-view=false
 server.servlet.session.timeout=30d
-frontend.host=http://localhost:3000
+frontend=http://localhost:3000
